// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevopsAdoptionTableCellFlag disabled matches the snapshot 1`] = `
<div>
  <div
    class="gl-flex gl-justify-end sm:gl-justify-start"
  >
    <gl-icon-stub
      alt="MRs not checked"
      name="issue-open-m"
      size="16"
      variant="subtle"
    />
  </div>
</div>
`;

exports[`DevopsAdoptionTableCellFlag disabled when the enabled flag is changed to true matches the snapshot 1`] = `
<div>
  <div
    class="gl-flex gl-justify-end sm:gl-justify-start"
  >
    <gl-icon-stub
      alt="MRs checked"
      name="status_success_solid"
      size="16"
      variant="success"
    />
  </div>
</div>
`;

exports[`DevopsAdoptionTableCellFlag enabled matches the snapshot 1`] = `
<div>
  <div
    class="gl-flex gl-justify-end sm:gl-justify-start"
  >
    <gl-icon-stub
      alt="MRs checked"
      name="status_success_solid"
      size="16"
      variant="success"
    />
  </div>
</div>
`;

exports[`DevopsAdoptionTableCellFlag enabled when the enabled flag is changed to false matches the snapshot 1`] = `
<div>
  <div
    class="gl-flex gl-justify-end sm:gl-justify-start"
  >
    <gl-icon-stub
      alt="MRs not checked"
      name="issue-open-m"
      size="16"
      variant="subtle"
    />
  </div>
</div>
`;

exports[`DevopsAdoptionTableCellFlag enabled with a variant specified matches the snapshot 1`] = `
<div
  variant="primary"
>
  <div
    class="gl-flex gl-justify-end sm:gl-justify-start"
  >
    <gl-icon-stub
      alt="MRs checked"
      name="status_success_solid"
      size="16"
      variant="success"
    />
  </div>
</div>
`;
